[package]
name = "shared-buffer"
description = "An abstraction over buffers in memory or memory-mapped files"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2021"
homepage = "https://github.com/wasmerio/shared-buffer.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmerio/shared-buffer.git"
rust-version = "1.64.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
