[package]
name = "shared-buffer"
description = "An abstraction over buffers backed by memory-mapped files or bytes in memory"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2021"
homepage = "https://github.com/wasmerio/shared-buffer.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmerio/shared-buffer.git"
rust-version = "1.64.0"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
memmap2 = "0.6.1"

[dev-dependencies]
tempfile = "3.5.0"
